--- a/sitio/src/views/productAdd.ejs
+++ b/sitio/src/views/productAdd.ejs
@@ -38,10 +38,10 @@
               <div class="form-floating">
                 <select class="form-select" id="category" placeholder="Leave a comment here" name="category" >
                   <option value="" selected hidden>Categoría:</option>
-                  <option value="Tazas con frase">Tazas con frase</option>
-                  <option value="Tazas de cerámica">Tazas de cerámica</option>
-                  <option value="Teteras">Teteras</option>
-                  <option value="Azucareras">Azucareras</option>
+                  <% categories.forEach(category => { %>
+                    <option value="<%= category.id %>" <%= category.id === category.id  ? 'selected' : null%> ><%= category.name %></option>
+                   <% }) %>
+  
                 </select>
                 <label for="category">Seleccionar</label>
               </div>
