--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -33,7 +33,7 @@
                             <li>
                                 <a href="/users/profile"><i class="fas fa-user-alt"></i>Mi perfil</a>
                             </li>
-                            <% if (locals.userLogin.rol==='admin' ) { %>
+                            <% if (locals.userLogin.rol === 2 ) { %>
                                 <li><a href="/admin"><i class="far fa-user-circle"></i> Administrador </a>
                                     <% } %>
                                 <li>
