users visibles y buscador de admin funcionando

--- a/sitio/src/views/partials/header-admin.ejs
+++ b/sitio/src/views/partials/header-admin.ejs
@@ -26,8 +26,8 @@
           </li>
 
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+        <form class="d-flex" action="/products/search" method="GET">
+          <input class="form-control me-2" type="search" name="keywords" placeholder="Buscar" aria-label="Buscar">
           <button class="btn btn-dark" type="submit">Buscar</button>
         </form>
       </div>
