--- a/sitio/src/views/searchAdmin.ejs
+++ b/sitio/src/views/searchAdmin.ejs
@@ -6,26 +6,21 @@
 
     <%- include("partials/header-admin") %>
 
+    <main>
     <div class="card text-center " style="background-color: #ffffff">
-      <div class="card-header mb-5">
+      <div class="card-header mb-3">
        <h1> Bienvenido al modo <i>Administrador</i> </h1>
       </div>
 
-        <div class="card-body mb-3" style="background-color: #ffd8cb">
-          <h5 class="card-title">En está página podrá agregar, modificar y eliminar sus Productos</h5>
-          <p class="card-text">En caso de necesitar ayuda para agregar un producto presione el siguiente botón:</p>
-          <a href="#tutorialAdd" class="btn btn-dark">Agregar Producto</a>
-
-          
+      <div class="container">
+        <div class="col-mb-3">
+            <h2 class="card-title">Resultados de la búsqueda: "<%= keywords %>"</h2>
         </div>
-
-      <main class="container">
         <nav>
           <div class="nav nav-tabs" id="nav-tab" role="tablist">
             <button class="nav-link active border-0 rounded-0 bg-light" id="nav-home-tab"
               data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab"
               aria-controls="nav-home" aria-selected="true">Productos</button>
-              <button class="nav-link  border-0 rounded-0 bg-light" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Usuarios</button>
           </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
@@ -56,6 +51,7 @@
                         </tr>
                       </thead>
                       <tbody>
+                        <% if (products.length> 0) { %>
                         <% products.forEach((product,index)=> { %>
                           <tr>
                             <th scope="row">
@@ -89,6 +85,13 @@
                             </td>
                           </tr>
                           <% }) %>
+                          <% }else { %>
+                            <div class="col-mb-3">
+                                <h2 class="card-title text-danger" >
+                                  "No hay productos que coincidan con esa búsqueda"
+                                </h2>
+                            </div>
+                            <% } %>
                       </tbody>
                     </table>
                   </div>
@@ -97,61 +100,6 @@
               </div>
             </div>
           </div>
-          <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-            <div class="tab-content" id="nav-tabContent">
-           <div class="tab-pane fade show active bg-light" id="nav-home" role="tabpanel"
-            aria-labelledby="nav-home-tab">
-            <div class="row">
-              <div class="col-12 mx-auto">
-                <div class="card shadow border-0">
-                  <div class="card-header" style="background-color: #ffd8cb">
-                    <div class="row">
-                      <div class="col-12 col-md-2">
-                        <span>Usuarios: <%= users.length %> </span>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card-body">
-                    <table class="table table-hover">
-                      <thead>
-                        <tr>
-                          <th scope="col">#</th>
-                          <th scope="col">Imagen</th>
-                          <th scope="col">Nombre y apellido</th>
-                          <th scope="col">Email</th>
-                          <th scope="col">Rol</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <% users.forEach((user,index)=> { %>
-                          <tr>
-                            <th scope="row">
-                              <%= index + 1 %>
-                            </th>
-                            <td><img width="100" height="100" src="/img/users/<%= user.avatar %>" alt=""></td>
-                            <td>
-                              <%= user.name %>
-                            </td>
-                            <td>
-                              <%= user.email %>
-                            </td>
-                            <td>
-                              <%= user.rol.name %>
-                            </td>
-                            <td class="d-flex justify-content-around">
-                              <div>
-                                <form action="/destroy/<%= user.id %>?_method=DELETE" method="POST">
-                                  <button type="submit" class="btn btn-sm btn-danger" style="width: 35px;"><i
-                                      class="fas fa-trash"></i></button>
-                                </form>
-                              </div>
-                            </td>
-                          </tr>
-                          <% }) %>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
 
               </div>
             </div>
@@ -159,14 +107,10 @@
           </div>
         </div>
 
-      </main>
-      
-        <br><br><br>
-
-        <img src="/img/tutorial1.gif" class="img-fluid" alt="..." id="tutorialAdd">
-        
-        
       </div>
+    </main>
+        
+      
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
