validacion front de products terminado

--- a/sitio/src/views/partials/footer.ejs
+++ b/sitio/src/views/partials/footer.ejs
@@ -27,7 +27,7 @@
             <a href="#"><i class="fas fa-phone-volume"></i> +541162628888</a>
           </div>
           <div class="email">
-            <a href="#"><i class="fas fa-envelope"></i> hirschmannsol@gmail.com</a>
+            <a href="#"><i class="fas fa-envelope"></i> horaDelTe@gmail.com</a>
             <div class="ubicacion">
              <a href="#"><i class="fas fa-map-marked-alt"></i> Av. Siempre Viva 7777 , Springfield</a>
            
