--- a/sitio/src/views/productAdd.ejs
+++ b/sitio/src/views/productAdd.ejs
@@ -1,88 +1,136 @@
 <!doctype html>
 <html lang="es">
-    <%- include("partials/head-admin",{title: 'Agregar'}) %>
+<%- include("partials/head-admin",{title: 'Agregar' }) %>
+
   <body>
 
     <%- include("partials/header-admin") %>
 
-<main class="container bg-white">
-  <div class="row">
-    <div class="col-12.col-md-10 col-lg-8 mt-5 mx-auto">
-  
-      <div class="card p-3">
-  
-        <div class="card-header text-light " style="background-color: #ffb8a1">
-          <h4>Agregar Producto</h4>
+      <main class="container bg-white">
+        <div class="row">
+          <div class="col-12.col-md-10 col-lg-8 mt-5 mx-auto">
+
+            <div class="card p-3">
+
+              <div class="card-header text-light " style="background-color: #ffb8a1">
+                <h4>Agregar Producto</h4>
+              </div>
+
+              <div class="card-body">
+                <form class="row" id='form-add-product' action="/products/create" method="POST"
+                  enctype="multipart/form-data">
+
+                  <div class="mb-3">
+                    <div class="form-floating">
+                      <input name="name" type="text" class="form-control" placeholder="Leave a comment here" id="name"
+                        value="<%= locals.old && old.name ? old.name : null %>">
+                      <label for="name" class="form-label">Nombre del producto:</label>
+                    </div>
+                    <span id="nameError" class="text-danger small">
+                      <%= locals.errors && errors.name ? errors.name.msg : null%>
+                    </span>
+                  </div>
+
+                  <div class="mb-3">
+                    <div class="form-floating">
+                      <textarea class="form-control" placeholder="Leave a comment here" id="description"
+                        style="height: 100px" name="description"
+                        value="<%= locals.old && old.description ? old.description : null %>"></textarea>
+                      <label for="description">Descripción:</label>
+                    </div>
+                    <span id="descriptionError" class="text-danger small">
+                      <%= locals.errors && errors.description ? errors.description.msg : null%>
+                    </span>
+                  </div>
+
+                  <div class="d-flex justify-content-between">
+
+                    <div class="col-12 col-md-6 mx-1">
+
+                      <div class="col-12 mb-3">
+                        <div class="form-floating">
+                          <select class="form-select <%= locals.errors && errors.category ? 'is-invalid' : null %>"
+                            id="category" placeholder="Leave a comment here" name="category">
+                            <option value="" selected hidden>Seleccionar:</option>
+                            <% categories.forEach(category=> { %>
+                              <option value="<%= category.id %>" <%=locals.old && old.category.id===category.id
+                                ? 'selected' : null%> ><%= category.name %>
+                              </option>
+                              <% }) %>
+                          </select>
+                          <label for="category">Categoría:</label>
+                        </div>
+                        <span id="categoryError" class="text-danger small">
+                          <%= locals.errors && errors.category ? errors.category.msg : null%>
+                        </span>
+                      </div>
+
+                      <div class="col-12 mb-4">
+                        <div class="mb-3">
+                          <label for="image" class="btn btn-outline-secondary w-100 mt-2" id="btnImagen">Cargar
+                            imagen:</label>
+                          <input hidden class="form-control" type="file" id="image" name="image" multriple>
+                          <span id="imageError" class="text-danger small">
+                            <%= locals.errors && errors.image ? errors.image.msg : null%>
+                          </span>
+                        </div>
+                      </div>
+
+                    </div>
+
+                    <div class="col-12 col-md-5 mb-3 mx-1">
+                      <div class="d-flex text-center form-control row" >
+                        <p>Vista previa de imagen</p>
+                        <div id="preview">
+
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <div class="col-12 col-md-6 mb-3">
+                    <div class="form-floating">
+                      <input type="number" class="form-control" placeholder="Precio" id="price" name="price"
+                        aria-describedby="price" value="<%= locals.old && old.price ? old.price : null %>">
+                      <label for="price" class="form-label">Precio:</label>
+                    </div>
+                    <span id="priceError" class="text-danger small">
+                      <%= locals.errors && errors.price ? errors.price.msg : null%>
+                    </span>
+                  </div>
+
+                  <div class="col-12 col-md-6 mb-3">
+                    <div class="form-floating">
+                      <input type="number" class="form-control" placeholder="Descuento" id="discount" name="discount"
+                        aria-describedby="discount" value="<%= locals.old && old.discount ? old.discount : null %>">
+                      <label for="discount" class="form-label">Descuento:</label>
+                    </div>
+                    <span id="discountError" class="text-danger small">
+                      <%= locals.errors && errors.discount ? errors.discount.msg : null%>
+                    </span>
+                  </div>
+                  <span id="errorEmpty" class="text-danger small"></span>
+
+                  <div class="d-flex justify-content-center">
+                    <a href="/admin" class="btn btn-secondary mx-2" type="submit">Cancelar</a>
+                    <button type="submit" class="btn btn-dark mx-2">Agregar</button>
+                  </div>
+
+                </form>
+              </div>
+
+            </div>
+
+          </div>
+
         </div>
-  
-        <div class="card-body">
-          <form class="row" action="/products/create" method="POST" enctype="multipart/form-data">
-            
-            <div class="mb-3">
-              <div class="form-floating">
-                <input name="name" type="text" class="form-control" placeholder="Leave a comment here" id="name" value="<%= locals.old && old.name ? old.name : null %>">
-                <label for="name" class="form-label">Nombre del producto:</label>
-              </div>
-              <span class="text-danger small"><%= locals.errors && errors.name ? errors.name.msg : null%> </span>
-            </div>
-            
-            <div class="mb-3">
-              <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="description" style="height: 100px" name="description" value="<%= locals.old && old.description ? old.description : null %>"></textarea>
-                <label for="description">Descripción:</label>
-              </div>
-              <span class="text-danger small"><%= locals.errors && errors.description ? errors.description.msg : null%> </span>
-            </div>
-  
-            <div class="mb-3">
-              <div class="form-floating">
-                <select class="form-select" id="category" placeholder="Leave a comment here" name="category" >
-                  <option value="" selected hidden>Categoría:</option>
-                  <% categories.forEach(category => { %>
-                    <option value="<%= category.id %>" <%= category.id === category.id  ? 'selected' : null%> ><%= category.name %></option>
-                   <% }) %>
-                </select>
-                <label for="category">Seleccionar</label>
-              </div>
-              <span class="text-danger small"><%= locals.errors && errors.category ? errors.category.msg : null%> </span>
-            </div>
-            
-            <div class="mb-3">
-              <label for="image" class="form-label" >Cargar imagen:</label>
-              <input class="form-control" type="file" id="image" accept="image/x-png,image/jpeg" name="image" >
-              <span class="text-danger small"><%= locals.errors && errors.image ? errors.image.msg : null%> </span>
-            </div>
-  
-            <div class="mb-3">
-              <div class="form-floating">
-                <input type="number" class="form-control" placeholder="Precio" id="price" name="price" aria-describedby="price" value="<%= locals.old && old.price ? old.price : null %>">
-                <label for="price" class="form-label">Precio:</label>
-              </div>
-              <span class="text-danger small"><%= locals.errors && errors.price ? errors.price.msg : null%> </span>
-            </div>
-  
-            <div class="mb-3">
-              <div class="form-floating">
-                <input type="number" class="form-control" placeholder="Descuento" id="discount" name="discount" aria-describedby="discount" value="<%= locals.old && old.discount ? old.discount : null %>">
-                <label for="discount" class="form-label">Indicar Descuento:</label>
-              </div>
-              <span class="text-danger small"><%= locals.errors && errors.discount ? errors.discount.msg : null%> </span>
-            </div>
-            
-            <div class="col-12 col-md-6">
-              <button type="submit" class="btn btn-dark">Agregar</button>
-            </div>
-          </form>
-        </div>  
-  
-      </div>
-  
-    </div>
-  
-  </div>
-</main>
+      </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
+      <script src="/javascripts/productAddValidator.js"></script>
   </body>
+
 </html>
