--- a/sitio/src/views/productModify.ejs
+++ b/sitio/src/views/productModify.ejs
@@ -1,92 +1,140 @@
 <!doctype html>
 <html lang="es">
-    <%- include("partials/head-admin",{title: 'Modificar'}) %>
+<%- include("partials/head-admin",{title: 'Modificar' }) %>
+
   <body>
 
     <%- include("partials/header-admin") %>
 
-<main class="container bg-white">
+      <main class="container bg-white">
 
 
-  <div class="row">
-    <div class="col-12.col-md-10 col-lg-8 mt-5 mx-auto">
-  
-      <div class="card p-3">
-  
-  
-        <div class="card-header text-light " style="background-color: #ffb8a1">
-          <h4>Modificar Producto</h4>
+        <div class="row">
+          <div class="col-12.col-md-10 col-lg-8 mt-5 mx-auto">
+
+            <div class="card p-3">
+
+
+              <div class="card-header text-light " style="background-color: #ffb8a1">
+                <h4>Modificar Producto</h4>
+              </div>
+
+              <div class="card-body">
+                <form class="row" id='form-modify-product' action="/products/edit/<%= product.id %>?_method=PUT"
+                  method="POST" enctype="multipart/form-data">
+
+                  <div class="mb-3">
+                    <div class="form-floating">
+                      <input name="name" type="text" class="form-control" placeholder="Nombre de Producto" id="name"
+                        value="<%= product.name %> ">
+                      <label for="name" class="form-label">Nombre del producto:</label>
+                    </div>
+                    <span id="nameError" class="text-danger small">
+                      <%= locals.errors && errors.name ? errors.name.msg : null%>
+                    </span>
+                  </div>
+
+
+                  <div class="mb-3">
+                    <div class="form-floating">
+                      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                        style="height: 100px" name="description"><%= product.description %></textarea>
+                      <label for="description">Descripción:</label>
+                    </div>
+                    <span id="descriptionError" class="text-danger small">
+                      <%= locals.errors && errors.description ? errors.description.msg : null%>
+                    </span>
+                  </div>
+
+                  <div class="d-flex justify-content-between">
+
+                    <div class="col-12 col-md-6 mx-1">
+
+                      <div class="col-12 mb-3">
+                        <div class="form-floating">
+                          <select class="form-select" id="category" aria-label="Floating label select example"
+                            name="category">
+                            <option value="" selected hidden>Categoría:</option>
+                            <% categories.forEach(category=> { %>
+                              <option value="<%= category.id %>" <%=product.categoryId===category.id ? 'selected' :
+                                null%> ><%= category.name %>
+                              </option>
+                              <% }) %>
+                          </select>
+                          <label for="category">Seleccionar</label>
+                        </div>
+                        <span id="categoryError" class="text-danger small">
+                          <%= locals.errors && errors.category ? errors.category.msg : null%>
+                        </span>
+                      </div>
+
+                      <div class="col-12 mb-4">
+                        <div class="mb-3">
+                          <label for="image" class="btn btn-outline-secondary w-100 mt-2"class="form-label" id="btnImagen">Cambiar imagen:</label>
+                          <input hidden class="form-control" type="file" id="image" name="image" multiple>
+                          <span id="imageError" class="text-danger small">
+                            <%= locals.errors && errors.image ? errors.image.msg : null%>
+                          </span>
+                        </div>
+                      </div>
+
+                      <div class="col-12 mb-4">
+                        <div class="form-floating">
+                          <input type="number" class="form-control" placeholder="Precio" id="price" name="price"
+                            aria-describedby="price" value=<%=product.price %> >
+                          <label for="price" class="form-label">Precio:</label>
+                        </div>
+                        <span id="priceError" class="text-danger small">
+                          <%= locals.errors && errors.price ? errors.price.msg : null%>
+                        </span>
+                      </div>
+
+                      <div class="col-12 mb-4">
+                        <div class="form-floating">
+                          <input type="number" class="form-control" placeholder="Descuento" id="discount" name="discount"
+                            aria-describedby="discount" value=<%=product.discount %> >
+                          <label for="discount" class="form-label">Descuento:</label>
+                        </div>
+                        <span id="discountError" class="text-danger small">
+                          <%= locals.errors && errors.discount ? errors.discount.msg : null%>
+                        </span>
+                      </div>
+
+                    </div>
+
+                    <div class="col-12 col-md-5 mb-3 mx-1">
+                      <div class="d-flex justify-content-center form-control row" id="preview">
+                        <p>Vista previa de imagen</p>
+                        <img src="/img/products/<%= product.image %>" alt="imagen">
+                      </div>
+                    </div>
+
+                  </div>
+                  
+                  <span id="errorEmpty" class="text-danger small"></span>
+
+                  <div class="d-flex justify-content-center">
+                    <a href="/admin" class="btn btn-secondary mx-2" type="submit">Cancelar</a>
+                    <button type="submit" class="btn btn-dark mx-2">Modificar</button>
+                  </div>
+
+                </form>
+              </div>
+
+            </div>
+
+          </div>
+
         </div>
-  
-        <div class="card-body">
-          <form action="/products/edit/<%= product.id %>?_method=PUT" method="POST" class="row" enctype="multipart/form-data">
-            <div class="mb-3">
-              <div class="form-floating">
-              <input name="name" type="text" class="form-control" placeholder="Nombre de Producto" id="name" value="<%= product.name %> ">
-              <label for="name" class="form-label">Nombre del producto:</label>
-            </div>
-            <span class="text-danger small"><%= locals.errors && errors.name ? errors.name.msg : null%> </span>
-            </div>
-            
 
-            <div class="mb-3">
-              <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" name="description"><%= product.description %></textarea>
-                <label for="description">Descripción:</label>
-              </div>
-              <span class="text-danger small"><%= locals.errors && errors.description ? errors.description.msg : null%> </span>
-            </div>
-  
-            <div class="mb-3">
-              <div class="form-floating">
-                <select class="form-select" id="category" aria-label="Floating label select example" name="category" >
-                  <option value="" selected hidden>Categoría:</option>
-                  <% categories.forEach(category => { %>
-                    <option value="<%= category.id %>" <%= product.categoryId === category.id  ? 'selected' : null%> ><%= category.name %></option>
-                   <% }) %>
-                </select>
-                <label for="category">Seleccionar</label>
-              </div>
-              <span class="text-danger small"><%= locals.errors && errors.category ? errors.category.msg : null%> </span>
-            </div>
-            
-            <div class="mb-3">
-              <label for="image" class="form-label" >Cargar imagen:</label>
-              <input class="form-control" type="file" id="image" accept="image/x-png,image/jpeg" name="image" multiple>
-            </div>
-  
-            <div class="mb-3">
-              <div class="form-floating">
-              <input type="number" class="form-control" placeholder="Precio" id="price" name="price" aria-describedby="price" value= <%=  product.price %> >
-              <label for="price" class="form-label">Precio:</label>
-            </div>
-            <span class="text-danger small"><%= locals.errors && errors.price ? errors.price.msg : null%> </span>
-            </div>
-  
-            <div class="mb-3">
-              <div class="form-floating">
-                <input type="number" class="form-control" placeholder="Descuento" id="discount" name="discount" aria-describedby="discount" value= <%= product.discount %> >
-              <label for="discount" class="form-label">Indicar Descuento:</label>
-            </div>
-            <span class="text-danger small"><%= locals.errors && errors.discount ? errors.discount.msg : null%> </span>
-            </div>
-            
-            <div class="col-12 col-md-6">
-              <button type="submit" class="btn btn-dark">Modificar</button>
-            </div>
-          </form>
-        </div>    
-  
-      </div>
-  
-    </div>
-  
-  </div>
-  
 
-</main>
- 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
- 
+      </main>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
+      <script src="/javascripts/productModifyValidator.js"></script>
+
   </body>
+
 </html>
