--- a/sitio/src/views/register.ejs
+++ b/sitio/src/views/register.ejs
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<%- include("partials/head",{title: 'Registro de usuario'}) %>
+<%- include("partials/head",{title: 'Registro de usuario' }) %>
 
-<body class="register">
+    <body class="register">
 
-    <%- include("partials/header") %>
+        <%- include("partials/header") %>
 
-    <main>
-        <div class="formulario">
-            <p>registrate</p>
-            <form action="" method="POST">
-                <div class="box-form">
-                    <label class="nombreCompleto" for="nombre">Nombre y apellido</label>
-                    <input type="text" id="nombre" name="name">
-                    <span class= "error"><%= locals.errores && errores.name ? errores.name.msg : null %></span>
+            <main>
+                <div class="formulario">
+                    <p>registrate</p>
+                    <form id="form-reg" action="" method="POST">
+                        <div class="box-form">
+                            <label class="nombreCompleto" for="nombre">Nombre y apellido</label>
+                            <input type="text" id="nombre" name="name"
+                                value="<%= (typeof datos!='undefined' && datos.nombre ? datos.nombre : null) %>">
+                            <span class="error">
+                                <%= locals.errores && errores.name ? errores.name.msg : null %>
+                            </span>
+                        </div>
+                        <div class="box-form">
+                            <label class="email" for="email">Email</label>
+                            <input type="email" id="email" name="email"
+                                value="<%= (typeof datos !='undefined' && datos.email ? datos.email : null) %>">
+                            <span class="error">
+                                <%= locals.errores && errores.email ? errores.email.msg : null %>
+                            </span>
+                        </div>
+                        <div class="box-form">
+                            <label class="telefono" for="telefono">telefono</label>
+                            <input type="tel" id="telefono" name="telefono">
+                            <span class="error">
+                                <%= locals.errores && errores.telefono ? errores.telefono.msg : null %>
+                            </span>
+                        </div>
+                        <div class="box-form">
+                            <label for="pass">Contraseña</label>
+                            <input type="password" id="pass" name="password">
+                            <span class="error">
+                                <%= locals.errores && errores.password ? errores.password.msg : null %>
+                            </span>
+                        </div>
+                        <div class="box-form">
+                            <label for="password">Confirmar contraseña</label>
+                            <input type="password" id="password2" name="password2">
+                            <span class="error">
+                                <%= locals.errores && errores.password2 ? errores.password2.msg : null %>
+                            </span>
+                        </div>
+                        <div class="registrarse">
+                            <button type="submit">registrarse</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="box-form">
-                    <label class="email" for="email">Email</label>
-                    <input type="email" id="email" name="email">
-                    <span class= "error"><%= locals.errores && errores.email ? errores.email.msg : null %></span>
+                <div class="iniciar-sesion">
+                    <p>¿Tenes cuenta?<a href="/users/login"> Haz click para iniciar sesion</a></p>
                 </div>
-                <div class="box-form">
-                    <label class="telefono" for="telefono">telefono</label>
-                    <input type="tel" id="telefono" name="telefono">
-                    <span class= "error"><%= locals.errores && errores.telefono ? errores.telefono.msg : null %></span>
-                </div>
-                <div class="box-form">
-                    <label for="pass">Contraseña</label>
-                    <input type="password" id="pass" name="password">
-                    <span class= "error"><%= locals.errores && errores.password ? errores.password.msg : null %></span>
-                </div>
-                <div class="box-form">
-                    <label for="password">Confirmar contraseña</label>
-                    <input type="password" id="password2" name="password2">
-                    <span class= "error"><%= locals.errores && errores.password2 ? errores.password2.msg : null %></span>
-                </div>
-                <div class="registrarse">
-                    <button type="submit">registrarse</button>
-                </div>
-            </form>
-        </div>
-        <div class="iniciar-sesion">
-            <p>¿Tenes cuenta?<a href="/users/login"> Haz click para iniciar sesion</a></p>
-        </div>
-    </main>
-    
-    <%- include("partials/footer") %>
-    
-</body>
+            </main>
+
+            <%- include("partials/footer") %>
+
+    </body>
 
 </html>
