--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -235,12 +235,17 @@ margin-left: 30%;
 }
 
 /*formulario contacto*/
-.formulario{
+.home section.section-form{
+  margin: auto;
+}
+.form{
+  width: 100%;
+}
+.form-contact{
   background:rgba(0, 0, 0, 0.5);
-  margin: 25px 0px;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.8);
-  width: 350px;
-  height: 200px;
+  margin-bottom: 25px;
+  width: 100%;
+  height: 385px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -248,9 +253,71 @@ margin-left: 30%;
   position: relative;
   z-index: 2;
 }
+/*box de texto*/
+.texto{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/*titulo contacto*/
+.titulo{
+  font-weight: bold;
+  color: white;
+}
+.home p.sub-titulo{
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  width: 90%;
+}
+/*box formulario*/
+.box-formulario{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/*titulos de la seccion para rellenar*/
+.box-formulario label{
+  text-transform: uppercase;
+  font-size: 12px;
+  margin: 0 0 2px 10px;
+  color: white;
+}
+/*seccion para rellenar*/
+.box-formulario input{
+  width: 90%;
+  border:none;
+  border-radius: 5px;
+  font-size: 12px;
+  padding: 5px;
+  margin: 5px 0px;
+}
+.box-formulario textarea{
+  width: 90%;
+  border:none;
+  border-radius: 5px;
+  font-size: 12px;
+  padding: 5px;
+  margin: 5px 0px;
+}
+/*boton contacto*/
+.box-button{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.form-contact button{
+    border: none;
+    color: #ffffff;
+    background-color: rgb(0, 0, 0);
+    font-size: 12px;
+    text-transform: uppercase;
+    padding: 5px 12px;
+    border-radius: 10px;
+    margin: 5px 0px;
+}
 
 #video{
-  min-height: 100vh;
   position: relative;
 }
 .home video{
@@ -258,18 +325,9 @@ margin-left: 30%;
   top: 0;
   left: 0;
   width: 100%;
-  height: 20%;
+  height: 385px;
   object-fit: cover;
-}
-.capa{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #1d1c1c;
-  opacity: 0.5;
-  mix-blend-mode: overlay;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.8);
 }
 
 /*tablet*/
@@ -337,10 +395,34 @@ margin-left: 38%;
     height: 62%;
   }
 
+  /*box formulario*/
+  
+ .form-contact{
+  flex-direction: row;
+  height: 300px;
+  margin-bottom: 0px;
+  justify-content: space-around;
+ }
+ .home video{
+  height: 300px;
+  box-shadow: 6px 8px 6px rgb(0 0 0 / 80%);
 }
-
-
-
+.box-formulario label {
+  font-size: 14px;
+}
+.box-formulario input {
+  font-size: 14px;
+}
+.box-formulario textarea{
+  font-size: 14px;
+}
+.form {
+  width: 300px;
+}
+.texto {
+  width: 300px;
+}
+}
 
 
 @media screen and (min-width:  1024px) {
@@ -417,4 +499,25 @@ margin-left: 38%;
     transform: scale(1);
 }
 
+/*box formulario*/
+.home p.sub-titulo {
+  font-size: 16px;
+}
+.form-contact {
+  width: 90%;
+  height: 310px;
+  margin: 0% 5%;
+}
+.home video {
+  width: 90%;
+  height: 310px;
+  margin: 0% 5%;
+  box-shadow: 8px 10px 8px rgb(0 0 0 / 80%);
+}
+.form {
+  width: 400px;
+}
+.texto {
+  width: 380px;
+}
 }
