--- a/sitio/src/views/index.ejs
+++ b/sitio/src/views/index.ejs
@@ -35,19 +35,24 @@
 
                         <div class="container">
                             <div class="box">
-                                <a href="/products/category/<%= categories.id %>">
+                                <a href="/products/category/1">
                                     <img src="/img/portada-tazaFrase.jpg">
                                     <div class="capa">
-                                        <h2>Tazas con frase</h2>
+                                        <% categories.forEach(category=>{ %>
+                                            <h2>
+                                                <%= category.id===1 ? category.name : null %>
+                                            </h2>
+                                            <% }) %>
                                     </div>
                                 </a>
+
                             </div>
 
                             <div class="box">
                                 <a href="#">
                                     <img src="/img/portada-tazaCeramica.jpg">
                                     <div class="capa">
-                                        <h2>Tazas de cerámica</h2>
+
                                     </div>
                                 </a>
                             </div>
@@ -56,103 +61,108 @@
                                 <a href="#">
                                     <img src="/img/portada-azucarera.jpg">
                                     <div class="capa">
-                                        <h2>Azucareras</h2>
+
                                     </div>
                                 </a>
+
                             </div>
 
                             <div class="box">
                                 <a href="#">
                                     <img src="/img/portada-teteras.jpg">
                                     <div class="capa">
-                                        <h2>Tetera</h2>
+
                                     </div>
                                 </a>
                             </div>
                         </div>
 
-                        <h1>Ofertas</h1>
-                        <% ofertas.forEach(product=>{ %>
-                            <article class="product-card">
-                                <img src="/img/products/<%= product.image %>" width="100%" alt="">
-                                <div class="detail-product">
-                                    <div class="box-botones">
-                                        <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i>
-                                            Añadir al carrito</a>
-                                        <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
-                                    </div>
-                                    <h4>
-                                        <%= product.name %>
-                                    </h4>
-                                    <div class="contenedor-precio-descuento">
-                                        <% if (product.discount> 0) { %>
-                                            <p class="precio">
-                                                <span class="precio">$<%= toThousand(product.price) %></span>
-                                                <br>
-                                                <b>
-                                                    <%= product.discount %>% OFF
-                                                </b>
-                                            </p>
-                                            <p class="precio-total">
-                                                $<%= toDiscount(product.price, product.discount) %>
-                                            </p>
-                                    </div>
-                                    <% } %>
-                                </div>
-                            </article>
+                        <% categories.forEach(category=>{ %>
+                            <a href="/products/category/<%= category.id %>">
+                                <p>
+                                    <%= category.name %>
+                                </p>
+                            </a>
                             <% }) %>
 
+                                <h1>Ofertas</h1>
+                                <% ofertas.forEach(product=>{ %>
+                                    <article class="product-card">
+                                        <img src="/img/products/<%= product.image %>" width="100%" alt="">
+                                        <div class="detail-product">
+                                            <div class="box-botones">
+                                                <a href="/products/cart" class="myButton1"><i
+                                                        class="fas fa-shopping-cart"></i>
+                                                    Añadir al carrito</a>
+                                                <a href="/products/detail/<%= product.id %>" class="myButton2">Ver
+                                                    Mas</a>
+                                            </div>
+                                            <h4>
+                                                <%= product.name %>
+                                            </h4>
+                                            <div class="contenedor-precio-descuento">
+                                                <% if (product.discount> 0) { %>
+                                                    <p class="precio">
+                                                        <span class="precio">$<%= toThousand(product.price) %></span>
+                                                        <br>
+                                                        <b>
+                                                            <%= product.discount %>% OFF
+                                                        </b>
+                                                    </p>
+                                                    <p class="precio-total">
+                                                        $<%= toDiscount(product.price, product.discount) %>
+                                                    </p>
+                                            </div>
+                                            <% } %>
+                                        </div>
+                                    </article>
+                                    <% }) %>
 
 
 
-                                <div class="botones">
-                                    <button type="reset" id="reset"><a href="/products"> Ver más productos</a></button>
 
-                                </div>
+                                        <div class="botones">
+                                            <button type="reset" id="reset"><a href="/products"> Ver más
+                                                    productos</a></button>
+
+                                        </div>
                     </section>
 
-                    <section id="video">
-                        <div class="formulario">
-                            <h4>Perfil de usuario</h4>
-                            <form class="row" method="POST" enctype="multipart/form-data">
+                    <section class="section-form" id="video">
+                        <div class="form-contact">
+                            <div class="texto">
+                                <h4 class="titulo">Contacto</h4>
+                                <p class="sub-titulo">Si tenés alguna consulta, o simplemente queres mandarnos un
+                                    mensaje, ¡No dudes en hacerlo! Pronto te daremos una respuesta.</p>
+                            </div>
+                            <form class="form" action="https://formsubmit.co/oliveramagalir@gmail.com" method="POST">
 
-                                <div class="nombre">
-                                    <label for="name" class="form-label">Nombre y apellido</label>
-                                    <input name="name" type="text" class="form-control" placeholder="Nombre y apellido"
-                                        id="name" value="">
-                                    <span class="text-danger small ms-2">
-                                        <%= locals.errors && errors.name ? errors.name.msg : null%>
-                                    </span>
+                                <div class="box-formulario">
+                                    <label for="nombre">Nombre y apellido</label>
+                                    <input type="text" id="nombre" name="name" placeholder="Tu nombre y apellido">
                                 </div>
 
-                                <div class="email">
-                                    <label for="email" class="form-label">Email
-                                        address</label>
-                                    <input type="email" id="email" class="form-control" placeholder="name@example.com">
-                                    <span class="text-danger small ms-2">
-                                        <%= locals.errors && errors.name ? errors.name.msg : null%>
-                                    </span>
+                                <div class="box-formulario">
+                                    <label for="email">Email</label>
+                                    <input type="email" id="email" name="email" placeholder="name@example.com">
                                 </div>
 
-                                <div class="textarea">
-                                    <label for="mensaje" class="form-label">Mensaje</label>
-                                    <textarea class="form-control" id="mensaje" rows="3"></textarea>
-                                    <span class="text-danger small ms-2">
-                                        <%= locals.errors && errors.name ? errors.name.msg : null%>
-                                    </span>
+                                <div class="box-formulario">
+                                    <label for="msj">Mensaje</label>
+                                    <textarea type="text" id="msj" name="msj" rows="3"
+                                        placeholder="Tu mensaje"></textarea>
                                 </div>
-                                <div class="col-12 col-md-6">
-                                    <button type="submit" class="btn btn-dark">Enviar</button>
+
+                                <div class="box-button">
+                                    <button type="submit">Enviar</button>
                                 </div>
                             </form>
                         </div>
-
                         <div class="box-video">
                             <video muted autoplay loop>
                                 <source src="/video/Tea.mp4" type="video/mp4">
                             </video>
                         </div>
-                        <div class="capa"></div>
                     </section>
 
                 </main>
