--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -45,7 +45,7 @@
 }
 .product-card-products img {
   width: 100%;
-  height: 60%;
+  height: 50%;
 }
 
 .contenedor-precio-descuento {
@@ -114,7 +114,6 @@
 
 .home main .detail-product h5 {
   font-size: 12px;
- padding:  5px;
   opacity: .5;
   width: 100%;
   height: 80px;
@@ -140,6 +139,7 @@
 .home main article {
   margin-bottom: 10px;
   background-color: white;
+  height: 400px;
 }
 .home main article .detail-product {
   border-top: 1px solid #ebebeb;
@@ -231,7 +231,106 @@ margin-left: 30%;
   font-family: Roboto Condensed;
   font-weight: Regular;
   font-size: 14px;
- 
+}
+
+/*formulario contacto*/
+.home section.section-form{
+  margin: auto;
+}
+.form{
+  width: 100%;
+}
+.form-contact{
+  background:rgba(0, 0, 0, 0.5);
+  margin-bottom: 25px;
+  width: 100%;
+  height: 385px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 2;
+}
+/*box de texto*/
+.texto{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/*titulo contacto*/
+.titulo{
+  font-weight: bold;
+  color: white;
+}
+.home p.sub-titulo{
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  width: 90%;
+}
+/*box formulario*/
+.box-formulario{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/*titulos de la seccion para rellenar*/
+.box-formulario label{
+  text-transform: uppercase;
+  font-size: 12px;
+  margin: 0 0 2px 10px;
+  color: white;
+}
+/*seccion para rellenar*/
+.box-formulario input{
+  width: 90%;
+  border:none;
+  border-radius: 5px;
+  font-size: 12px;
+  padding: 5px;
+  margin: 5px 0px;
+}
+.box-formulario textarea{
+  width: 90%;
+  border:none;
+  border-radius: 5px;
+  font-size: 12px;
+  padding: 5px;
+  margin: 5px 0px;
+}
+/*boton contacto*/
+.box-button{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.form-contact button{
+    border: none;
+    color: #ffffff;
+    background-color: rgb(0, 0, 0);
+    font-size: 12px;
+    text-transform: uppercase;
+    padding: 5px 12px;
+    border-radius: 10px;
+    margin: 5px 0px;
+}
+.form-contact button:hover {
+  font-weight: bold;
+  color: #020202;
+  background-color: rgb(255, 255, 255);
+}
+#video{
+  position: relative;
+}
+.home video{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 385px;
+  object-fit: cover;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.8);
 }
 
 /*tablet*/
@@ -267,6 +366,7 @@ margin-left: 30%;
  
   .home main article {
     width: 32%;
+    height: 418px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -285,7 +385,7 @@ margin-left: 30%;
   font-size: 15px;
   font-weight: 400;
   background-color: rgb(109, 109, 109);
-margin-left: 38%;
+  margin-left: 38%;
   }
 
 
@@ -299,13 +399,37 @@ margin-left: 38%;
     height: 62%;
   }
 
+  /*formulario*/
+ .form-contact{
+  flex-direction: row;
+  height: 300px;
+  margin-bottom: 0px;
+  justify-content: space-around;
+ }
+ .home video{
+  height: 300px;
+  box-shadow: 6px 8px 6px rgb(0 0 0 / 80%);
+ }
+ .box-formulario label {
+  font-size: 14px;
+ }
+ .box-formulario input {
+  font-size: 14px;
+ }
+ .box-formulario textarea{
+  font-size: 14px;
+ }
+ .form {
+  width: 300px;
+ }
+ .texto {
+  width: 300px;
+ }
+
 }
 
 
-
-
-
-@media screen and (min-width:  1024px) {
+@media (min-width:  1024px) {
   .home .contenedor-precio-descuento p.precio-total{
     font-size: 20px;
     font-weight: bold;
@@ -339,5 +463,27 @@ margin-left: 38%;
     margin-left: 40%;
   }
   
+
+  /*formulario*/
+.home p.sub-titulo {
+  font-size: 16px;
+}
+.form-contact {
+  width: 90%;
+  height: 310px;
+  margin: 0% 5%;
+}
+.home video {
+  width: 90%;
+  height: 310px;
+  margin: 0% 5%;
+  box-shadow: 8px 10px 8px rgb(0 0 0 / 80%);
+}
+.form {
+  width: 400px;
+}
+.texto {
+  width: 380px;
+}
 
 }
