agrega alerta de eliminacion y partials/script

--- a/sitio/src/views/index.ejs
+++ b/sitio/src/views/index.ejs
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <script src="javascripts/glider.js"> </script>
+        <script src="javascripts/glider.js"></script>
         <script src="javascripts/home.js"></script>
 
         <!--fin carrousel-->
@@ -153,5 +153,6 @@
             <%- include('partials/footer') %>
 
         </body>
+        <%- include("partials/script") %>
 
 </html>
