--- a/sitio/src/views/admin.ejs
+++ b/sitio/src/views/admin.ejs
@@ -85,8 +85,10 @@
                                   <a href="/products/edit/<%= product.id %>" class="btn btn-sm btn-success"
                                     style="width: 40px;"><i class="fas fa-edit"></i></a>
                                   <div>
-                                    <form action="/products/destroy/<%= product.id %>?_method=DELETE" method="POST">
-                                      <button type="submit" class="btn btn-sm btn-danger" style="width: 35px;"><i
+                                    <form onsubmit="confirmProduct('form-delete-product<%= product.id %>', event)" 
+                                      action="/products/destroy/<%= product.id %>?_method=DELETE" method="POST"
+                                      id="form-delete-product<%= product.id %>">
+                                      <button type="submit" class="btn btn-sm btn-danger"  style="width: 35px;"><i
                                           class="fas fa-trash"></i></button>
                                     </form>
                                   </div>
@@ -146,7 +148,9 @@
                                     </td>
                                     <td class="d-flex justify-content-around">
                                       <div>
-                                        <form action="/users/destroy/<%= user.id %>?_method=DELETE" method="POST">
+                                        <form onsubmit="confirmUser('form-delete-user<%= user.id %>', event)"
+                                          action="/users/destroy/<%= user.id %>?_method=DELETE" method="POST"
+                                          id="form-delete-user<%= user.id %>">
                                           <button type="submit" class="btn btn-sm btn-danger" style="width: 35px;"><i
                                               class="fas fa-trash"></i></button>
                                         </form>
@@ -175,10 +179,8 @@
 
       </div>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
-
+      
   </body>
+  <%- include("partials/script") %>
 
 </html>
