--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <div class="caja-superior">
         <a href="/"><img src="/img/Logo.png" alt=""></a>
         <div class="search">
-            <form action="/search" method="GET">
+            <form id="form-search" action="/search" method="GET">
             <input name="keywords" placeholder=" Buscar... " type="text">
             <button class="search-form_button"type="submit"><i class="fas fa-search"></i></button>
         </form>
@@ -58,4 +58,5 @@
             <i class="fas fa-bars"></i>
         </div>
     </div>
+    
 </header>
