agrega vista quienes somos sin termianar

--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -11,7 +11,7 @@
             <ul class="navbar">
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/products">Productos</a></li>
-                <li><a href="">Preguntas frecuentes</a></li>
+                <li><a href="/quienes-somos">¿Quienes somos?</a></li>
                 <li><a href="/products/cart"><i class="fas fa-shopping-cart"></i></a>
             </ul>
 
