buscadores funcionando/preventDefault

--- a/sitio/src/views/partials/header-admin.ejs
+++ b/sitio/src/views/partials/header-admin.ejs
@@ -26,11 +26,12 @@
           </li>
 
         </ul>
-        <form class="d-flex" action="/products/search" method="GET">
-          <input class="form-control me-2" type="search" name="keywords" placeholder="Buscar" aria-label="Buscar">
+        <form id="form-search" class="d-flex" action="/products/search" method="GET">
+          <input id="input-search" class="form-control me-2" type="search" name="keywords" placeholder="Buscar" aria-label="Buscar">
           <button class="btn btn-dark" type="submit">Buscar</button>
         </form>
       </div>
     </div>
   </nav>
+  <script src="/javascripts/search.js"></script>
 </header>
