--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
         <a href="/"><img src="/img/Logo.png" alt=""></a>
         <div class="search">
             <form id="form-search" action="/search" method="GET">
-            <input name="keywords" placeholder=" Buscar... " type="text">
+            <input id="input-search" name="keywords" placeholder=" Buscar... " type="text">
             <button class="search-form_button"type="submit"><i class="fas fa-search"></i></button>
         </form>
         </div>
